--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -27,12 +27,11 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#EEEEEE"
+            android:background="#000000"
             tools:context=".ui.MainActivity" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
